--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2? family = Josefin + Sans: wght @ 200 & display = swap');
 @import url(" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" );/*usar ícones awesome*/
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css");/*usar bootstrap*/
-
+@import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
 *{/*para toda a pagina*/
 margin: 0;
 padding: 0;
@@ -274,4 +274,122 @@ opacity: 0;
     .social-midias i:hover{ /*encostou muda a cor e aumenta o tamanho*/
 
         color: #df39e2;
+    }
+
+    .conhecimentos{/*div conhecimentos*/
+
+        display: grid;/*Criar colunas */
+        grid-template-columns: repeat(16,1fr);/*quantidades de colunas para cada conhecimento*/
+        grid-template-rows: repeat(6,6rem);/*criação de linhas */
+        row-gap: .5rem; /*espaços nas linhas */
+
+    }
+
+
+    .conhecimento:nth-child(1){/*posicionando os elementos da div conhecimentos HTML O PRIMEIRO*/
+
+        grid-column: 4 / 7; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 1 / 3;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+    .conhecimento:nth-child(2){/*posicionando os elementos da div conhecimentos CSS*/
+
+        grid-column: 3 / 6; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 3 / 5;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+
+    .conhecimento:nth-child(3){/*posicionando os elementos da div conhecimentos Designer*/
+
+        grid-column: 4 / 7; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 5 / -1;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+
+    .conhecimento:nth-child(4){/*posicionando os elementos da div conhecimentos JAVASCRIPT*/
+
+        grid-column: 11 / 14; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 1 / 3;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+
+    .conhecimento:nth-child(5){/*posicionando os elementos da div conhecimentos BOOTSTRAP*/
+
+        grid-column: 12 / 15; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 3 / 5;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+
+
+    .conhecimento:nth-child(6){/*posicionando os elementos da div conhecimentos GIT E GITHUB*/
+
+        grid-column: 11 / 14; /*DA COLUNA 4 ATÉ A 7*/
+        grid-row: 5 / -1;/*DA LINHA 3 ATÉ A 5*/
+
+    }
+
+
+    .sessao-conhecimentos{/*cor de fundo da section*/
+    
+        background-color: rgba(236, 233, 233, 0.89);
+
+
+    }
+
+
+    .sessao-header{/*formatação da div*/
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    
+        
+    }
+
+    .sessao-header h1{/*formatação do titulo da section*/
+
+        font-family: 'Yatra One', cursive, sans-serif;
+        font-size: 3rem;
+        color: #555;
+        border-bottom: solid 3px #d53ad8;
+        margin-bottom: 1rem;
+
+    }
+
+    .conhecimentos-header{/*formatação da div*/
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #555;
+    }
+
+    .conhecimentos-header i{/*fortamatação dos icones */
+        font-size: 2.5rem;
+
+    }
+
+    .conhecimentos-header h3{
+
+        font-family: 'Yatra One', cursive, sans-serif;
+        padding-left: 1rem;/*espaçamento entre palavras*/
+        font-size: 1.5rem;
+
+    }
+    .conhecimento-text{
+
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        margin-top: 1rem;
+        font-size: small;
+
+    }
+    .conhecimentos-img-wraaper{/*configuração da imagem de centro*/
+        grid-column: 7/11;
+        grid-row: 2/6;
+        width: 100%;
+
+    }
+
+    .conhecimentos-img-wraaper img{
+        object-fit: cover;/*especifica como o conteúdo de um elemento substituído deve ser ajustado à caixa estabelecida*/
+        width: 100%;
+
     }
