--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ opacity: 0;
     }
 
     .conhecimentos-header i{/*fortamatação dos icones */
-        font-size: 2.5rem;
+        font-size: 1.5rem;
 
     }
 
@@ -371,14 +371,14 @@ opacity: 0;
 
         font-family: 'Yatra One', cursive, sans-serif;
         padding-left: 1rem;/*espaçamento entre palavras*/
-        font-size: 1.5rem;
+        font-size: 1rem;
 
     }
     .conhecimento-text{
 
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         margin-top: 1rem;
-        font-size: small;
+        font-size: 0.5rem;
 
     }
     .conhecimentos-img-wraaper{/*configuração da imagem de centro*/
@@ -391,5 +391,50 @@ opacity: 0;
     .conhecimentos-img-wraaper img{
         object-fit: cover;/*especifica como o conteúdo de um elemento substituído deve ser ajustado à caixa estabelecida*/
         width: 100%;
+        height: 100%;
 
+    }
+
+
+    .projetos{
+
+        display:flex;
+        justify-content: space-evenly;
+    
+    }
+
+    .cards{
+    
+        width: 20rem;
+        height: 30rem;
+
+    }
+
+    .card-img-wrapper{
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        background-color:rgba(68, 66, 66, 0.034);
+        border-radius: 0.5rem;
+    }
+
+    .card-img-wrapper img{
+    
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+        opacity: .8;
+
+    }
+    
+    .card-info{
+        position: absolute;
+        margin-left: 1rem;
+        bottom: -79rem;
+        font-size: 16px;
+        padding-left: 2rem;
+        padding-top: 3rem;
+        padding-bottom: 1rem;
+        width: 250px;
+        height: 200px;
     }
