--- a/style.css
+++ b/style.css
@@ -171,9 +171,11 @@ opacity: 0;
 
 font-family: 'muli',serif;
 color: rgb(248, 248, 248);/*cor da letra*/
-background: #fc00ff;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #00dbde, #fc00ff);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #00dbde, #fc00ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #f953c6;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 /*cor de fundo site top https://uigradients.com/#Timber*/
 /*
 padding-left: 2;conforme a borda da esquerda
@@ -411,7 +413,7 @@ opacity: 0;
     }
 
     .card-img-wrapper{
-        object-fit: cover;
+        
         width: 100%;
         height: 100%;
         background-color:rgba(68, 66, 66, 0.034);
@@ -419,22 +421,70 @@ opacity: 0;
     }
 
     .card-img-wrapper img{
-    
+        object-fit: cover;
+        background-color: rgba(22, 21, 21, 0.87);
         width: 100%;
         height: 100%;
         border-radius: 0.5rem;
-        opacity: .8;
+        opacity: .9;
 
     }
     
-    .card-info{
+    .card-info{ 
+        visibility: hidden;
         position: absolute;
+        bottom: -73rem;
+        width: 300px;
+        height: 300px;
+        text-shadow: 0.3rem ,0.2rem, 0.3rem, rgba(0, 0, 0, .4);
         margin-left: 1rem;
-        bottom: -79rem;
-        font-size: 16px;
-        padding-left: 2rem;
-        padding-top: 3rem;
-        padding-bottom: 1rem;
-        width: 250px;
-        height: 200px;
+        margin-top: 6rem;
+        padding-left: 1rem;
+    }
+
+    .card-info h2{ 
+    font-family: 'Yatra One', cursive, sans-serif; 
+    font-size: 2rem;
+    font-weight: 500;
+    color:#eee;    
+
+    }
+    .card-info h3{
+        
+     font-family: 'Yatra One', cursive, sans-serif;
+     font-weight: 500;
+     color: #ff4081;   
+
+    }
+
+    .card-info p{
+
+        color: #eee;
+        font-weight: 400;
+        width: 80%;
+
+    }
+
+    .card-info button{
+   
+     width: 8rem;
+     height: 2.5rem;
+     background: #f953c6;  /* fallback for old browsers */
+     background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+     background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+     margin-top: 1rem;  
+     font-size: 0.7rem;
+     color: #eee; 
+     border-radius: 5px;
+     border: none;
+    }
+
+    .cards:hover .card-info{
+
+    
+      opacity: 1;
+      visibility: visible;  
+
+
+
     }
