--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ text-decoration: none;/*tirar sublinhados de indicação de links*/
     width: 2rem; /*largura*/
     height: 2rem;/*altura*/
     position: fixed;/*posição fixada*/
-    z-index: 100;/*define posição dos objetos*/
+    z-index: 200;/*define posição dos objetos*/
     right: 2rem;/*borda direita*/
     top: 2rem;/*altura em relação ao topo*/
     display: flex; /**/
@@ -211,6 +211,7 @@ opacity: 0;
         height: 100%;
         background-color: #ffff;
         position: fixed;
+        z-index: 100;
         top: 0;
         right: -20rem; /*inicialmente fora da tela*/
         transition: all 1s;/*animação de entrada pelo lado de 1s*/
@@ -416,30 +417,40 @@ opacity: 0;
         
         width: 100%;
         height: 100%;
-        background-color:rgba(68, 66, 66, 0.034);
+        background-color:rgba(27, 27, 27, 0.877);
         border-radius: 0.5rem;
     }
 
     .card-img-wrapper img{
         object-fit: cover;
-        background-color: rgba(22, 21, 21, 0.87);
         width: 100%;
         height: 100%;
         border-radius: 0.5rem;
-        opacity: .9;
+        opacity: .8;
+        transition: opacity .3s;
+
+    }
+
+
+    .cards:hover .card-img-wrapper img{
+
+        opacity: .5;
+
 
     }
     
     .card-info{ 
-        visibility: hidden;
         position: absolute;
-        bottom: -73rem;
+        visibility: hidden;
+        opacity: 0;
+        bottom: -76rem;
         width: 300px;
         height: 300px;
         text-shadow: 0.3rem ,0.2rem, 0.3rem, rgba(0, 0, 0, .4);
         margin-left: 1rem;
         margin-top: 6rem;
         padding-left: 1rem;
+        transition: all .3s; /*animação de aparecer*/
     }
 
     .card-info h2{ 
@@ -479,12 +490,115 @@ opacity: 0;
      border: none;
     }
 
-    .cards:hover .card-info{
-
-    
+    .cards:hover .card-info{ /*quando passar o mouse ele aparece  e fica opaco */
+        bottom: -74rem;
       opacity: 1;
       visibility: visible;  
 
+    }
 
+    .sessao-contatos{
+
+        width: 100%;
+        height: 100vh; /*Tamanho ja janela*/
+        background-color: #272727;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contato-wrapper{
+        width: 60%;
+        height: 30rem;    
+        display: flex;
+        box-shadow: 0 2rem 3rem rgba(0, 0, 0, .5);
+    }
+
+    .contato-left{
+        width: 35%;
+        background: linear-gradient(rgba(15,15,15,0.3),rgba(22,22,22,0.8)),
+         url('./icons/contato.jpg') ;
+
+        background-size: cover;
+    }
+
+    .contato-rigth{
+        width: 65%;
+        background-color: #eee;
+        padding: 1rem 3rem 3rem 3rem;
 
     }
+
+
+    .sessao-contatos h1{
+        width: 100%;
+        text-align: center;
+        font-family:'Yatra One', cursive, sans-serif;
+        color: #272727;
+        font-size: 3rem;
+        font-weight: lighter;
+
+    }
+
+    .sessao-contatos form{
+
+        width: 100%;
+        display: flex; 
+        flex-direction: column;/*se ficar de lado com display flex */
+        align-items: center;
+
+    }
+    .field{
+        background: transparent;
+        border: none;
+        width: 25rem;
+        font-size: 1.5rem;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        border-bottom: 2px dashed #000 ;
+        height: 3rem;
+        outline: none;/*remove a marcação quando selecionado*/
+        margin: 2rem 0;
+
+    }
+    .input-group{
+
+        position: relative;
+
+    }
+
+    .input-group textarea{
+        padding-top: 1rem;
+        max-width: 25rem;
+        max-height: 2;
+
+    }
+    .field-label{
+
+        position: absolute;
+        left: 0;
+        top: 3rem;
+        font-size: 1.2rem;
+        font-family:'Josefin + Sans' ;
+        text-transform: uppercase; /*deixar todas as letras maiuculas*/
+        transition: all 0.3s;
+        
+    }
+.field:focus ~ label{
+    top:0;
+    font-size: 1rem;
+
+}
+.btn-submit{
+
+    width: 100%;
+    height: 2rem;
+    background: #f953c6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    font-size: 1rem;
+    color: #eee; 
+    border-radius: 5px;
+    border: none;
+    text-transform: uppercase;
+
+}
