--- a/style.css
+++ b/style.css
@@ -600,5 +600,90 @@ opacity: 0;
     border-radius: 5px;
     border: none;
     text-transform: uppercase;
+    
+
+}
+
+.sessao-orcamento{
+
+width: 100%;
+height: 100vh;
+background: url('/icons/bg-orcamento.jpg');
+object-fit: cover;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.orcamento-wrapper{
+    width: 60%;
+    height: 60%;
+    background-color: #ffffff99;
+    border-radius: 10px;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .5);
+    position: relative;
+}
+
+.sessao-orcamento h1{
+
+position:absolute;
+top: -2.5rem;
+left: 2rem;
+background: #f953c6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #b91d73, #f953c6);
+    padding: 0 3rem;
+    color: #eee;
+    font-family: 'Yatra One', cursive, sans-serif;
+    font-size: 3rem;
+    font-weight: lighter;
+    box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .5);
+    border-radius: 10px;
+
+}
+
+.orcamento-wrapper form{
+margin: 4rem;
+display: grid; /*display por colunas e linhas */
+grid-template-columns: auto 1fr; /*criando duas colunas*/
+column-gap: 1rem; /*espaços entre colunas*/
+row-gap: 1rem; /*espaços entre linhas */
+
+}
+
+.orcamento-wrapper label{
+font-family:'Josefin + Sans', serif ;
+font-size: 1rem;
+font-weight: bolder;
+
+}
+
+.orcamento-wrapper button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 2rem;
+    background: #f953c6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #b91d73, #f953c6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
+    font-size: 1rem;
+    color: #eee; 
+    border-radius: 5px;
+    border: none;
+    text-transform: uppercase;
+    padding: 1rem;
+    cursor: pointer;
+    grid-column: 2;
+
+}
+.sessao-orcamento input[type='number']{
+    width: 4rem;
+    font-size: 1rem;
+    outline: none;
+    border-radius: 10px;
+    border: none;
+    padding: 0.3rem;
+
 
 }
